qutebrowser: distinct blank page

--- a/root/blank.html
+++ b/root/blank.html
@@ -5,8 +5,8 @@
 <title>&#8203;</title>
 <style>
     body {
-		/* base01 */
-		background-color: #303030;
+		/* base01 / 2 */
+		background-color: #181818;
     }
 </style>
 </head>
